feat(test) - complete the unit testing

--- a/.env
+++ b/.env
@@ -25,5 +25,5 @@ TOKEN_LENGTH=10
 JWT_SECRET_KEY=ilQyrUKRQzhPXYxz1I0ZZh4McdDBS4qE
 JWT_EXPIRED_PER_SESSION=1440
 JWT_REFRESH_EXPIRED_PER_DAY=7
-JWT_AUDIENCE=sekaarapps
-JWT_ISSUER=sekaarserver
+JWT_AUDIENCE=loanapps
+JWT_ISSUER=loanserver
