feat(add)- configuration docker

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-APP_SERVICE="Authentication Service"
+APP_SERVICE="Loan Application Service"
 
 API_HOST=localhost
-API_PORT=8082
+API_PORT=8000
 API_PREFIX=api
 API_VERSION=v1
 API_PATH=loan
