feat(add)-configuration

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_SERVICE="Loan Application Service"
 
 API_HOST=localhost
 API_PORT=8000
-API_PREFIX=api
+API_PREFIX=apis
 API_VERSION=v1
 API_PATH=loan
 
